added schedule and edusummit pages

--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-11-02 11:57+0100\n"
+"POT-Creation-Date: 2018-11-07 12:50+0100\n"
 "PO-Revision-Date: 2018-10-16 20:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -38,36 +38,43 @@ msgstr ""
 msgid "Venue"
 msgstr "Miesto konania"
 
-#: templates/body.html:51 templates/faq.html:8 templates/faq.html:46
-#: templates/tickets.html:14
+#: templates/body.html:51 templates/tickets.html:14
 msgid "Tickets"
 msgstr "Vstupenky"
 
-#: templates/body.html:54 templates/cfp.html:8
+#: templates/body.html:54 templates/edusummit.html:86 templates/schedule.html:9
+msgid "Schedule"
+msgstr "Program"
+
+#: templates/body.html:57 templates/cfp.html:8
 msgid "Call for proposals"
 msgstr "Prihlás návrh na prednášku"
 
-#: templates/body.html:57 templates/cfv.html:8
+#: templates/body.html:60 templates/cfv.html:8
 msgid "Call for volunteers"
 msgstr "Pridaj sa k nám"
 
-#: templates/body.html:60
+#: templates/body.html:63
 msgid "Sponsoring"
 msgstr "Sponzoruj"
 
-#: templates/body.html:63 templates/coc.html:7
+#: templates/body.html:66 templates/edusummit.html:9
+msgid "EduSummit"
+msgstr "EduSummit"
+
+#: templates/body.html:69 templates/coc.html:7
 msgid "Code of Conduct"
 msgstr "Kódex správania"
 
-#: templates/body.html:66
+#: templates/body.html:72
 msgid "About Us"
 msgstr "O nás"
 
-#: templates/body.html:99
+#: templates/body.html:105
 msgid "Go to top of page"
 msgstr "Návrat na vrchol stránky"
 
-#: templates/body.html:101
+#: templates/body.html:107
 #, python-format
 msgid ""
 "%(pycontm)s is a trademark for worldwide conference activities claimed by"
@@ -76,25 +83,25 @@ msgstr ""
 "%(pycontm)s je ochranná známka %(psf)s pre celosvetové konferenčné "
 "aktivity."
 
-#: templates/body.html:103
+#: templates/body.html:109
 msgid "Python Software foundation"
 msgstr "Python Software foundation"
 
-#: templates/body.html:105
+#: templates/body.html:111
 #, python-format
 msgid "PyCon SK is organized by volunteers from %(spy)s."
 msgstr "PyCon SK je organizovaný dobrovoľníkmi z %(spy)s."
 
-#: templates/body.html:106
+#: templates/body.html:112
 msgid "SPy o.z."
 msgstr "SPy o.z."
 
-#: templates/body.html:106
+#: templates/body.html:112
 #, python-format
 msgid "Our <a href=\"%(url)s\">Privacy Policy</a>."
 msgstr "Naše pravidlá pre <a href=\"%(url)s\">Ochranu súkromia</a>"
 
-#: templates/body.html:108
+#: templates/body.html:114
 #, python-format
 msgid ""
 "Found a bug? Missing some information? This is community managed website,"
@@ -298,10 +305,6 @@ msgstr ""
 msgid "Where did you find out about SPy o.z.?"
 msgstr "Odkiaľ si sa dozvedel(a) o SPy o.z.?"
 
-#: templates/cfv.html:104
-msgid "Looking forward to hearing from you..."
-msgstr ""
-
 #: templates/coc.html:11
 msgid ""
 "The Python community is made up of members from around the globe with a "
@@ -423,9 +426,260 @@ msgstr ""
 "nevhodné na našom stretnutí. Nebudeme tolerovať obťažovanie účastníkov "
 "stretnutia v akejkoľvek forme."
 
-#: templates/faq.html:6
-msgid "Frequently Asked Questions"
+#: templates/edusummit.html:10
+msgid "Where Teachers meet Programmers"
+msgstr "Stretnutie učiteľov s programátormi"
+
+#: templates/edusummit.html:12
+msgid ""
+"EduSummit is a special section of the conference focused on teaching "
+"programming at primary and secondary schools. After two years of having "
+"an EduTrack at PyCon SK, consisting of a single day of talks for "
+"teachers, we are now organising a two day summit during which teachers "
+"will be introduced to innovative ways and methods of teaching "
+"programming, share their knowledge of useful tools and last but not least"
+" participate in numerous workshops given by experienced educators. This "
+"year’s keynote speaker will be Juraj Hromkovič, a professor at ETH "
+"Zürich, whose main focus of work is education for teachers of Computer "
+"Science.\n"
 msgstr ""
+"EduSummit je špeciálna sekcia konferencie zameraná na výučbu "
+"programovania na základných a stredných školách. Po dvoch rokoch, keď sme"
+" v rámci PyCon SK organizovali EduTrack pozostávajúci z jedného dňa "
+"prednášok pre učiteľov, organizujeme dvojdňový summit, počas ktorého budú"
+" učitelia oboznámení s inovatívnymi spôsobmi a metódami výučby "
+"programovania, budú zdieľať svoje vedomosti o užitočných nástrojoch a v "
+"neposlednom rade sa zúčastnia na mnohých workshopoch, ktoré budú viesť "
+"skúsení pedagógovia. Tohtoročným hlavným rečníkom bude Juraj Hromkovič, "
+"profesor na univerzite ETH Zürich, ktorý sa zameriava na vzdelávanie "
+"učiteľov informatiky.\n"
+
+#: templates/edusummit.html:17
+msgid "Who should attend EduSummit?"
+msgstr "Kto by sa mal zúčastniť EduSummitu?"
+
+#: templates/edusummit.html:19
+msgid ""
+"Anyone interest in teaching programming! Whether you are a teacher, "
+"educator, student, parent, run a coding club, etc. "
+msgstr ""
+"Každý, kto má záujem o výučbu programovania! Či už ste učiteľ, pedagóg, "
+"študent, rodič, vediete krúžok programovania a pod."
+
+#: templates/edusummit.html:20
+msgid "Please note that EduSummit will be primarily in Slovak language."
+msgstr "Upozorňujeme, že EduSummit bude predovšetkým v slovenskom jazyku."
+
+#: templates/edusummit.html:24
+msgid "Teaching with Hardware"
+msgstr "Učíme s Hardvérom"
+
+#: templates/edusummit.html:26
+msgid ""
+"The goal of the initiative Teaching with Hardware is to introduce such "
+"activities into computing lessons at primary and secondary schools, which"
+" will familiarise students with interesting applications of programming "
+"and information technologies, thus motivating them in developing their "
+"digital literacy and algorithmic thinking. We do this by introducing "
+"physical computing with a small programmable device called BBC micro:bit,"
+" and by supporting teachers with methodical materials and teacher "
+"training. In october 2018 we started a PILOT project on 14 schools across"
+" Slovakia, and the results will be announced at PyCon SK 2019."
+msgstr ""
+"Cieľom projektu Učíme s Hardvérom je vniesť do výučby informatiky na "
+"základných a stredných školách praktické zadania, ktoré žiakom ukážu "
+"zaujímavé možnosti využitia informatiky a vďaka ktorým sa žiaci sami "
+"začnú zaujímať o rozvíjanie svojich informatických zručností a "
+"algoritmického myslenia. Robíme to pomocou fyzického programovania s "
+"malým programovateľným zariadením s názvom BBC micro:bit a podporou "
+"učiteľov metodickými materiálmi a ich školením. V októbri 2018 sme "
+"spustili projekt PILOT na 14 školách po celom Slovensku. Jeho výsledky "
+"budú predstavené na konferencii PyCon SK 2019."
+
+#: templates/edusummit.html:27
+msgid ""
+"More info can be found at <a "
+"href=\"https://www.ucimeshardverom.sk\">www.ucimeshardverom.sk</a>"
+msgstr ""
+"Viac informácií nájdete na stránke <a "
+"href=\"https://www.ucimeshardverom.sk\">www.ucimeshardverom.sk</a>"
+
+#: templates/edusummit.html:31
+msgid "EduSummit workshops"
+msgstr "EduSummit workshopy"
+
+#: templates/edusummit.html:33
+msgid "We have confirmed these workshops for teachers"
+msgstr "Máme potvrdené tieto workshopy pre učiteľov"
+
+#: templates/edusummit.html:35
+msgid ""
+"An advanced workshop with BBC micro:bit for teachers who already teach "
+"with micro:bits."
+msgstr ""
+"Pokročilý workshop so zariadením BBC micro:bit pre učiteľov, ktorí už "
+"micro:bit používajú vo výučbe."
+
+#: templates/edusummit.html:36
+msgid "A beginner's workshop with BBC micro:bit given by high school students"
+msgstr ""
+"Workshop pre začiatočníkov so zariadením BBC micro:bit vedený študentami "
+"stredných škôl"
+
+#: templates/edusummit.html:37
+msgid ""
+"Workshop on using, creating and sharing Open Educational Resources for "
+"teachers"
+msgstr ""
+"Workshop o používaní, vytváraní a zdieľaní otvorených vzdelávacích "
+"zdrojov pre učiteľov"
+
+#: templates/edusummit.html:38
+msgid "Parse Open Data with Python"
+msgstr "Parsovanie otvorených údajov s Pythonom"
+
+#: templates/edusummit.html:39
+msgid "PyGame zero workshop for teachers"
+msgstr "Workshop o prostredí PyGame Zero  pre učiteľov"
+
+#: templates/edusummit.html:40
+msgid "Control Minecraft via Python"
+msgstr "Ovládanie Minecraftu pomocou Pythonu"
+
+#: templates/edusummit.html:41
+msgid "Turn your BBC micro:bit into a Minecraft game controller"
+msgstr "Premeňte svoj BBC micro: bit na herný ovládač pre Minecraft"
+
+#: templates/edusummit.html:43
+msgid "We will add workshops for teachers on other topics aswell."
+msgstr "Budeme pridávať workshopy pre učiteľov aj na iné témy."
+
+#: templates/edusummit.html:47
+msgid "SPy Cup"
+msgstr "SPy Cup"
+
+#: templates/edusummit.html:49
+msgid ""
+"Students from all 14 schools currently participating in Teaching with "
+"Hardware will join the SPy Cup contest, in which they create their own "
+"micro:bit project a create a step-by-step manual which the will publish "
+"under an open license on our website to inspire other teachers and "
+"students. The best projects will be awarded prizes and their authors will"
+" have a short presentation about their project at PyCon SK 2019."
+msgstr ""
+"Študenti zo všetkých 14 škôl, ktoré sa v súčasnosti zúčastňujú projektu "
+"Výuka s hardvérom, sa zapoja do súťaže SPy Cup, v rámci ktorej vytvoria "
+"vlastný micro:bit projekt a vytvoria k nemu návod krok za krokom, ktorý "
+"uverejnia pod otvorenou licenciou na našich webových stránkach ako "
+"inšpiráciu pre ostatných učiteľov a študentov. Najlepším projektom budú "
+"udelené ceny a ich autori budú mať krátku prezentáciu o ich projekte na "
+"konferencii PyCon SK 2019."
+
+#: templates/edusummit.html:50
+msgid ""
+"More info can be found at <a "
+"href=\"https://www.ucimeshardverom.sk/sutaz\">www.ucimeshardverom.sk/sutaz</a>"
+msgstr ""
+"Viac informácií nájdete na <a "
+"href=\"https://www.ucimeshardverom.sk/sutaz\">www.ucimeshardverom.sk/sutaz</a>"
+
+#: templates/edusummit.html:54
+msgid "Hardware Projects Showcase"
+msgstr "Prezentácia hardvérových projektov"
+
+#: templates/edusummit.html:56
+msgid ""
+"If you have created an interesting hardware project which uses Python, "
+"MicroPython or the BBC micro:bit and would like to share it to the world "
+"then bring it to PyCon SK 2019 :-)"
+msgstr ""
+"Ak ste vytvorili zaujímavý hardvérový projekt, ktorý používa Python, "
+"MicroPython alebo BBC micro:bit a chceli by ste ho zdieľať s celým "
+"svetom, prinieste ho na PyCon SK 2019 :-)"
+
+#: templates/edusummit.html:57
+msgid ""
+"You can find some inspiration here <a "
+"href=\"https://www.ucimeshardverom.sk/projekty/\">www.ucimeshardverom.sk/projekty</a>"
+msgstr ""
+"Inšpirovať sa môžete tu: <a "
+"href=\"https://www.ucimeshardverom.sk/projekty/\">www.ucimeshardverom.sk/projekty</a>"
+
+#: templates/edusummit.html:61
+msgid "Poster Session"
+msgstr "Posterová sekcia"
+
+#: templates/edusummit.html:63
+msgid "We will host a poster session and we will be happy if you get involved."
+msgstr "Budeme organizovať aj posterovú sekciu a budeme radi, ak sa zapojíte."
+
+#: templates/edusummit.html:67
+msgid "Python Cup"
+msgstr "Python Cup"
+
+#: templates/edusummit.html:69
+msgid "The winners of Python Cup will be awarded at EduSummit."
+msgstr "V sekcii EduSummit budú vyhlásení víťazi súťaže Python Cup."
+
+#: templates/edusummit.html:70
+msgid ""
+"More info can be found at <a "
+"href=\"http://edi.fmph.uniba.sk/~tomcsanyiova/PythonCup/\">edi.fmph.uniba.sk/~tomcsanyiova/PythonCup</a>"
+msgstr ""
+"Ďalšie informácie nájdete na adrese <a "
+"href=\"http://edi.fmph.uniba.sk/~tomcsanyiova/PythonCup/\">edi.fmph.uniba.sk/~tomcsanyiova/PythonCup</a>"
+
+#: templates/edusummit.html:74
+msgid "What kind of ticked should I buy?"
+msgstr "Aký druh lístka by som si mal kúpiť?"
+
+#: templates/edusummit.html:76
+msgid ""
+"All available tickets apply for the whole PyCon SK conference, including "
+"the EduSummit section. All of the talks and workshops take place at the "
+"same venue and you can decide which talks and workshops you want to "
+"attend. If you are a teacher or student you are eligible for a discount."
+msgstr ""
+"Všetky druhy vstupeniek platia na celú konferenciu PyCon SK vrátane "
+"sekcie EduSummit. Všetky prednášky a workshopy sa konajú na tom istom "
+"mieste a môžete sa rozhodnúť, ktoré prednášky a workshopy chcete "
+"navštíviť. Ak ste učiteľ alebo študent, máte nárok na zľavu."
+
+#: templates/edusummit.html:80
+msgid "Young Coders' day"
+msgstr ""
+
+#: templates/edusummit.html:82
+msgid ""
+"On saturday, we will host a Young Coders' day, consisting of programming "
+"workshops for children."
+msgstr ""
+"V sobotu sa bude konať Young Coders day, pozostávajúci z programovacích "
+"dielní pre deti."
+
+#: templates/edusummit.html:88
+msgid "More information about the schedule can be found "
+msgstr "Viac informácií o programe nájdete "
+
+#: templates/edusummit.html:88 templates/edusummit.html:94
+msgid "here.</a>"
+msgstr "tu.</a>"
+
+#: templates/edusummit.html:92
+msgid "Sponsorship"
+msgstr "Sponzoruj"
+
+#: templates/edusummit.html:94
+msgid ""
+"By supporting PyCon you also support numerous educational activities "
+"during the conference. If the conference is profitable we finance "
+"educational activities during the whole year. More information on "
+"sponsorship can be found "
+msgstr ""
+"Sponzorovaním konferencie PyCon podporíte aj množstvo vzdelávacích "
+"aktivít počas konferencie. V prípade, že bude konferencia zisková, budeme"
+" zo zisku financovať vzdelávacie aktivity počas celého roka. Viac "
+"informácií o sponzoringu nájdete "
 
 #: templates/index.html:13 templates/venue.html:9
 msgid ""
@@ -892,6 +1146,102 @@ msgstr ""
 "Ja, Navrhovateľ, potvrdzujem najmä súhlas so zverejnením Príspevku na "
 "webstránkach SPy o.z. alebo na ďalších web stránkach určených PSF "
 "(vrátane, ale nie nutne výlučne YouTube)."
+
+#: templates/schedule.html:12
+msgid "What's on when (more details to be confirmed) "
+msgstr "Predbežný program"
+
+#: templates/schedule.html:18
+msgid "Friday"
+msgstr "Piatok"
+
+#: templates/schedule.html:19
+msgid "Saturday"
+msgstr "Sobota"
+
+#: templates/schedule.html:20
+msgid "Sunday"
+msgstr "Nedeľa"
+
+#: templates/schedule.html:25
+msgid "Talks [EN track]"
+msgstr "Prednášky [v EN]"
+
+#: templates/schedule.html:26 templates/schedule.html:27
+msgid "Talks [both EN and SK]"
+msgstr "Prednášky [v EN aj SK]"
+
+#: templates/schedule.html:30 templates/schedule.html:31
+#: templates/schedule.html:32
+msgid "Workshops [both EN and SK]"
+msgstr "Workshopy [v EN aj SK]"
+
+#: templates/schedule.html:35
+msgid "SPy Cup Presentations [SK] "
+msgstr "SPy Cup Prezentácie [SK] "
+
+#: templates/schedule.html:35 templates/schedule.html:40
+#: templates/schedule.html:41 templates/schedule.html:45
+#: templates/schedule.html:46 templates/schedule.html:50
+#: templates/schedule.html:55
+msgid "Edu"
+msgstr "Edu"
+
+#: templates/schedule.html:36
+msgid "Conference Game Finals [EN] "
+msgstr "Finále konferenčnej súťaže [EN] "
+
+#: templates/schedule.html:36
+msgid "Conference Contest"
+msgstr "Konferenčná súťaž"
+
+#: templates/schedule.html:37
+msgid "Sprints [both EN and SK]"
+msgstr "Šprinty [v EN aj SK]"
+
+#: templates/schedule.html:40
+msgid "EduSummit Talks [SK] "
+msgstr "EduSummit Prednášky [SK] "
+
+#: templates/schedule.html:41
+msgid "EduSummit Workshops [SK] "
+msgstr "EduSummit Workshopy [SK] "
+
+#: templates/schedule.html:45
+msgid "Python Cup [SK] "
+msgstr "Python Cup [SK] "
+
+#: templates/schedule.html:46
+msgid "Young Coders' day [SK] "
+msgstr "Young Coders' day [SK] "
+
+#: templates/schedule.html:50
+msgid "EduSummit Poster Session [both EN and SK] "
+msgstr "EduSummit Poster Session [v EN aj SK] "
+
+#: templates/schedule.html:51
+msgid "Main Poster session [both EN and SK]"
+msgstr "PyCon Poster Session [v EN aj SK]"
+
+#: templates/schedule.html:55
+msgid "Hardware Projects Showcase [both EN and SK] "
+msgstr "Prezentácia hardvérových projektov [v EN aj SK] "
+
+#: templates/schedule.html:56
+msgid "International PyCon organizers meeting [EN]"
+msgstr "Medzinárodné stretnutie organizátorov konferencií PyCon [EN]"
+
+#: templates/schedule.html:60
+msgid "Conference Party "
+msgstr "Konferenčná Párty "
+
+#: templates/schedule.html:60 templates/schedule.html:61
+msgid "Social Event"
+msgstr "Spoločenská udalosť"
+
+#: templates/schedule.html:61
+msgid "Conference Dinner "
+msgstr "Konferenčná Večera "
 
 #: templates/sponsoring.html:8
 msgid "Why become a sponsor?"
@@ -1509,4 +1859,10 @@ msgstr ""
 #~ msgstr ""
 #~ "Podávanie návrhov na prednášky pre PyCon"
 #~ " SK bude otvorené 16. októbra 2018."
+
+#~ msgid "Looking forward to hearing from you..."
+#~ msgstr ""
+
+#~ msgid "Frequently Asked Questions"
+#~ msgstr ""
 
