--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-11-03 01:12+0100\n"
+"POT-Creation-Date: 2018-11-10 16:09+0100\n"
 "PO-Revision-Date: 2018-10-16 20:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -263,8 +263,7 @@ msgstr "Vaše meno"
 
 #: templates/cfp_form.html:33
 msgid "Your name will be displayed on our website if your talk is accepted."
-msgstr ""
-"Vaše meno bude zobrazené na našom webe, ak bude prednáška akceptovaná."
+msgstr "Vaše meno bude zobrazené na našom webe, ak bude prednáška akceptovaná."
 
 #: templates/cfp_form.html:40
 msgid "Biography"
@@ -272,8 +271,7 @@ msgstr "Životopis"
 
 #: templates/cfp_form.html:42
 msgid "Your biography will be displayed on our website if your talk is accepted."
-msgstr ""
-"Váš životopis bude zobrazený na našom webe, ak bude prednáška akceptovaná."
+msgstr "Váš životopis bude zobrazený na našom webe, ak bude prednáška akceptovaná."
 
 #: templates/cfp_form.html:49
 msgid "Profile picture"
@@ -297,8 +295,8 @@ msgid ""
 "touch with you in case we need to discuss something with you or in case "
 "of emergency during the conference."
 msgstr ""
-"Váš telefón nebude zverejnený! Je pre organizátorov, aby sa s vami vedeli "
-"v prípade potreby spojiť pred alebo počas konferencie."
+"Váš telefón nebude zverejnený! Je pre organizátorov, aby sa s vami vedeli"
+" v prípade potreby spojiť pred alebo počas konferencie."
 
 #: templates/cfp_form.html:65
 msgid "About talk"
@@ -313,8 +311,8 @@ msgid ""
 "Name of your talk/workshop as it will be displayed on our website if your"
 " talk is accepted."
 msgstr ""
-"Názov vašej prednášky/workshopu, ktorý bude zobrazený na našom webe, ak bude"
-" prednáška akceptovaná."
+"Názov vašej prednášky/workshopu, ktorý bude zobrazený na našom webe, ak "
+"bude prednáška akceptovaná."
 
 #: templates/cfp_form.html:77
 msgid "Abstract"
@@ -325,8 +323,8 @@ msgid ""
 "Abstract of your talk will be published on our website if your talk is "
 "accepted."
 msgstr ""
-"Abstrakt vašej prednášky bude zverejnený na našom webe, ak bude "
-"prednáška akceptovaná."
+"Abstrakt vašej prednášky bude zverejnený na našom webe, ak bude prednáška"
+" akceptovaná."
 
 #: templates/cfp_form.html:86
 msgid "Type"
@@ -401,8 +399,8 @@ msgid ""
 "Please bear in mind that we are community conference with limited budget "
 "and we might not be able to fund you."
 msgstr ""
-"Majte prosím na pamäti, že sme komunitná konferencia s obmedzeným rozpočtom "
-"a je možné, že nebudeme môcť preplatiť vaše náklady."
+"Majte prosím na pamäti, že sme komunitná konferencia s obmedzeným "
+"rozpočtom a je možné, že nebudeme môcť preplatiť vaše náklady."
 
 #: templates/cfp_form.html:176 templates/cfp_form.html:205
 msgid "Yes"
@@ -421,8 +419,8 @@ msgid ""
 "Please provide us with this city only if you need travel funding so we "
 "can calculate ticket price."
 msgstr ""
-"Prosím zadajte, z ktorého mesta budete cestovať, ak potrebujete preplatiť "
-"cestovné náklady, aby sme mohli vypočítať cenu lístka."
+"Prosím zadajte, z ktorého mesta budete cestovať, ak potrebujete preplatiť"
+" cestovné náklady, aby sme mohli vypočítať cenu lístka."
 
 #: templates/cfp_form.html:199
 msgid "Do you need accomodation?"
@@ -454,11 +452,11 @@ msgstr "Potrebujeme ťa, aby si pomohol s organizáciou PyCon SK 2019!"
 
 #: templates/cfv.html:19 templates/index.html:43
 msgid ""
-"All of our staff members are volunteers. We are looking for a new "
-"memebers to join the team of organizers."
+"All of our staff members are volunteers. We are looking for a new members"
+" to join the team of organizers."
 msgstr ""
-"Všetci členovia nášho tímu sú doborvoľníci. Do tímu organizátorov "
-"hľadáme nových členov."
+"Všetci členovia nášho tímu sú doborvoľníci. Do tímu organizátorov hľadáme"
+" nových členov."
 
 #: templates/cfv.html:20
 msgid ""
@@ -468,25 +466,20 @@ msgstr ""
 "Je to skvelá príležitosť stretnúť ľudí, nájsť nových priateľov a aj sa "
 "naučiť nové veci."
 
-
-
 #: templates/cfv.html:24
 msgid ""
 "As a volunteer you get a free ticket to the  conference as a thank you "
 "for making the change  in our society."
 msgstr ""
-"Ako dobrovoľník dostaneš voľný lístok na konferenciu ako poďakovanie "
-"za to, že pomáhaš zlepšovať nasšu spoločnosť."
+"Ako dobrovoľník dostaneš voľný lístok na konferenciu ako poďakovanie za "
+"to, že pomáhaš zlepšovať nasšu spoločnosť."
 
 #: templates/cfv.html:25
 #, python-format
 msgid ""
-"If you send more than 40 hours during the year as a volunteer you can "
+"If you spend more than 40 hours during the year as a volunteer you can "
 "give 3%% to any registered non-profit in your tax return."
 msgstr ""
-"Ak stráviš vykonávaním dobrovoľníckej práce viac ako 40 hodín v priebehu "
-"roka, môžeš venovať 3%% svojich daní neziskovej organizácii pri podaní "
-"svojho daňového priznania."
 
 #: templates/cfv.html:51
 msgid "Your phone"
@@ -705,7 +698,7 @@ msgstr ""
 
 #: templates/index.html:53
 msgid "Conference ticket sale is open."
-msgstr "Predaj l9stkov na konferenciu je otvorený."
+msgstr "Predaj lístkov na konferenciu je otvorený."
 
 #: templates/index.html:56 templates/tickets.html:15
 msgid ""
@@ -818,8 +811,8 @@ msgid ""
 "environment."
 msgstr ""
 "Sme presvedčení, že by ste mali mať kontrolu nad tým, kto dostáva vaše "
-"osobné informácie, či už o tom, kde žijete, aké sú vaše záujmy, alebo ako "
-"vykonávate transakcie. Naším cieľom je len jediné: riadiť Python "
+"osobné informácie, či už o tom, kde žijete, aké sú vaše záujmy, alebo ako"
+" vykonávate transakcie. Naším cieľom je len jediné: riadiť Python "
 "komunitu na Slovensku v bezpečnom prostredí."
 
 #: templates/privacy-policy.html:21
@@ -849,8 +842,8 @@ msgid ""
 "you to review the privacy policies of Web sites before providing them "
 "with any of your personal information."
 msgstr ""
-"Iné web stránky, na ktoré môžu smerovať linky z naše web stránky, vrátane "
-"webstránok našich partnerov majú svoje vlastné pravidlá na ochranu "
+"Iné web stránky, na ktoré môžu smerovať linky z naše web stránky, vrátane"
+" webstránok našich partnerov majú svoje vlastné pravidlá na ochranu "
 "súkromia. SPy o.z. nie je zodpovedné za dodržovanie takýchto pravidiel na"
 " iných webstránkach. Odporúčame Vám preštudovať si pravidlá ochrany "
 "súkromia webstránok predtým, ako im poskytnete akékoľvek osobné údaje."
@@ -921,8 +914,8 @@ msgid ""
 "users submit sensitive information via the Web site, your information is "
 "protected both online and offline."
 msgstr ""
-"SPy o.z. robí všetky opatrenia pre ochranu užívateľských informácií. "
-"Keď užívateľ posiela citlivé informácie prostredníctvom webovej stránky, "
+"SPy o.z. robí všetky opatrenia pre ochranu užívateľských informácií. Keď "
+"užívateľ posiela citlivé informácie prostredníctvom webovej stránky, "
 "tieto informácie sú chránené online aj offline."
 
 #: templates/privacy-policy.html:54
@@ -953,8 +946,9 @@ msgid ""
 "<strong>PayPal</strong>: Payment provider, we use for event ticket "
 "payments. Read their privacy and policy: "
 msgstr ""
-"<strong>PayPal</strong>: Sprostredkovateľ platieb, využívame ho na platby "
-"za vstupenky na konferenciu. Prečítajte si ich pravidlá ochrany súkromia: "
+"<strong>PayPal</strong>: Sprostredkovateľ platieb, využívame ho na platby"
+" za vstupenky na konferenciu. Prečítajte si ich pravidlá ochrany "
+"súkromia: "
 
 #: templates/privacy-policy.html:71
 msgid ""
@@ -1296,8 +1290,8 @@ msgid ""
 " reasons we have opened a financial aid scheme\n"
 "              and give free tickets."
 msgstr ""
-"Ak sa zúčastníte konferencie, máte šancu stretnúť podobne naladených ľudí "
-"a vypočuť si množstvo zaujímavých príbehov.\n"
+"Ak sa zúčastníte konferencie, máte šancu stretnúť podobne naladených ľudí"
+" a vypočuť si množstvo zaujímavých príbehov.\n"
 "              Pre tých, ktorí si z finančných dôvodov nemôžu dovoliť "
 "kúpiť lístok na konferenciu, pripravili sme program na podporu\n"
 "              a máme pripravené určité množstvo lístkov zadarmo."
@@ -1386,7 +1380,8 @@ msgid ""
 msgstr ""
 "Snažíme sa tiež byť čo možno najekologickejší, takže jedlo podávame na "
 "keramických tanieroch, jeme s kovovým príborom \n"
-"              a pitnú vodu poskytujeme z recyklovateľných plastových fliaš."
+"              a pitnú vodu poskytujeme z recyklovateľných plastových "
+"fliaš."
 
 #: templates/tickets.html:117
 msgid "Real Conference Ticket Price"
@@ -1465,13 +1460,12 @@ msgid ""
 "              will be several presentations and workshops connected to "
 "the <i>Teaching with Hardware</i> project."
 msgstr ""
-"V priebehu niekoľkých týždňov budete informovaný, ktorá škola obdržala "
-"              tento výukový balík a o niekoľko mesiacov Vás budeme\n"
-"informovať ako úspešní boli študenti pri tvorbe vlastných "
-"              harvérových projektov s poskytnutým vybavením.\n"
-"Podrobnosti o tomto projekte nájdete v tomto "
-"<a href=\"%(pdf)s\" target=\"_blank\">PDF</a>. Počas PyConu SK 2019 budú"
-"\n"
+"V priebehu niekoľkých týždňov budete informovaný, ktorá škola obdržala"
+"               tento výukový balík a o niekoľko mesiacov Vás budeme\n"
+"informovať ako úspešní boli študenti pri tvorbe vlastných               "
+"harvérových projektov s poskytnutým vybavením.\n"
+"Podrobnosti o tomto projekte nájdete v tomto <a href=\"%(pdf)s\" "
+"target=\"_blank\">PDF</a>. Počas PyConu SK 2019 budú\n"
 "              viaceré prezentácie a workshopy súvisiace s projektom "
 "<i>Učíme s hardvérom</i>."
 
@@ -1753,4 +1747,26 @@ msgstr ""
 
 #~ msgid "We have opened call for proposals."
 #~ msgstr ""
+
+#~ msgid ""
+#~ "All of our staff members are "
+#~ "volunteers. We are looking for a "
+#~ "new memebers to join the team of"
+#~ " organizers."
+#~ msgstr ""
+#~ "Všetci členovia nášho tímu sú "
+#~ "doborvoľníci. Do tímu organizátorov hľadáme"
+#~ " nových členov."
+
+#~ msgid ""
+#~ "If you send more than 40 hours "
+#~ "during the year as a volunteer you"
+#~ " can give 3%% to any registered "
+#~ "non-profit in your tax return."
+#~ msgstr ""
+#~ "Ak stráviš vykonávaním dobrovoľníckej práce"
+#~ " viac ako 40 hodín v priebehu "
+#~ "roka, môžeš venovať 3%% svojich daní "
+#~ "neziskovej organizácii pri podaní svojho "
+#~ "daňového priznania."
 
