--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-11-14 16:16+0100\n"
+"POT-Creation-Date: 2018-11-27 21:59+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -304,7 +304,7 @@ msgstr ""
 msgid "Poster"
 msgstr ""
 
-#: templates/cfp_form.html:110 templates/edusummit.html:48
+#: templates/cfp_form.html:110 templates/edusummit.html:50
 msgid "Hardware Projects Showcase"
 msgstr ""
 
@@ -587,66 +587,70 @@ msgid ""
 msgstr ""
 
 #: templates/edusummit.html:19
+msgid "Profesor Juraj Hromkovič, DrSc."
+msgstr ""
+
+#: templates/edusummit.html:21
 msgid "Please note that EduSummit will be primarily in Slovak language."
 msgstr ""
 
-#: templates/edusummit.html:23
+#: templates/edusummit.html:25
 msgid "EduSummit workshops"
 msgstr ""
 
-#: templates/edusummit.html:25
+#: templates/edusummit.html:27
 msgid "On saturday we will hold numerous educational workshops."
 msgstr ""
 
-#: templates/edusummit.html:27
+#: templates/edusummit.html:29
 msgid "A beginner's workshop with BBC micro:bit given by high school students"
 msgstr ""
 
-#: templates/edusummit.html:28
+#: templates/edusummit.html:30
 msgid ""
 "An advanced workshop with BBC micro:bit for teachers who already teach "
 "with micro:bits."
 msgstr ""
 
-#: templates/edusummit.html:29
+#: templates/edusummit.html:31
 msgid ""
 "Workshop on using, creating and sharing Open Educational Resources for "
 "teachers"
 msgstr ""
 
-#: templates/edusummit.html:30
+#: templates/edusummit.html:32
 msgid "Parse Open Data with Python"
 msgstr ""
 
-#: templates/edusummit.html:31
+#: templates/edusummit.html:33
 msgid "PyGame zero workshop for teachers"
 msgstr ""
 
-#: templates/edusummit.html:32
+#: templates/edusummit.html:34
 msgid "Control Minecraft via Python"
 msgstr ""
 
-#: templates/edusummit.html:33
+#: templates/edusummit.html:35
 msgid "Turn your BBC micro:bit into a Minecraft game controller"
 msgstr ""
 
-#: templates/edusummit.html:35
+#: templates/edusummit.html:37
 msgid "We will update the workshop list after the Call for Proposals is closed."
 msgstr ""
 
-#: templates/edusummit.html:37
+#: templates/edusummit.html:39
 msgid "More information about the schedule can be found "
 msgstr ""
 
-#: templates/edusummit.html:37 templates/edusummit.html:95
+#: templates/edusummit.html:39 templates/edusummit.html:97
 msgid "here.</a>"
 msgstr ""
 
-#: templates/edusummit.html:41
+#: templates/edusummit.html:43
 msgid "SPy Cup"
 msgstr ""
 
-#: templates/edusummit.html:43
+#: templates/edusummit.html:45
 msgid ""
 "Students from all 14 schools currently participating in Teaching with "
 "Hardware will join the SPy Cup contest, in which they create their own "
@@ -656,30 +660,30 @@ msgid ""
 " have a short presentation about their project at PyCon SK 2019."
 msgstr ""
 
-#: templates/edusummit.html:44
+#: templates/edusummit.html:46
 msgid ""
 "More info can be found at <a "
 "href=\"https://www.ucimeshardverom.sk/sutaz\">www.ucimeshardverom.sk/sutaz</a>"
 msgstr ""
 
-#: templates/edusummit.html:50
+#: templates/edusummit.html:52
 msgid ""
 "If you have created an interesting hardware project which uses Python, "
 "MicroPython or the BBC micro:bit and would like to share it to the world "
 "then bring it to PyCon SK 2019 :-)"
 msgstr ""
 
-#: templates/edusummit.html:51
+#: templates/edusummit.html:53
 msgid ""
 "You can find some inspiration here <a "
 "href=\"https://www.ucimeshardverom.sk/projekty/\">www.ucimeshardverom.sk/projekty</a>"
 msgstr ""
 
-#: templates/edusummit.html:55
+#: templates/edusummit.html:57
 msgid "Teaching with Hardware"
 msgstr ""
 
-#: templates/edusummit.html:57
+#: templates/edusummit.html:59
 msgid ""
 "The goal of the initiative Teaching with Hardware is to introduce such "
 "activities into computing lessons at primary and secondary schools, which"
@@ -692,39 +696,39 @@ msgid ""
 " Slovakia, and the results will be announced at PyCon SK 2019."
 msgstr ""
 
-#: templates/edusummit.html:58
+#: templates/edusummit.html:60
 msgid ""
 "More info can be found at <a "
 "href=\"https://www.ucimeshardverom.sk\">www.ucimeshardverom.sk</a>"
 msgstr ""
 
-#: templates/edusummit.html:62
+#: templates/edusummit.html:64
 msgid "Poster Session"
 msgstr ""
 
-#: templates/edusummit.html:64
+#: templates/edusummit.html:66
 msgid "We will host a poster session and we will be happy if you get involved."
 msgstr ""
 
-#: templates/edusummit.html:68
+#: templates/edusummit.html:70
 msgid "Python Cup"
 msgstr ""
 
-#: templates/edusummit.html:70
+#: templates/edusummit.html:72
 msgid "The winners of Python Cup will be awarded at EduSummit."
 msgstr ""
 
-#: templates/edusummit.html:71
+#: templates/edusummit.html:73
 msgid ""
 "More info can be found at <a "
 "href=\"http://edi.fmph.uniba.sk/~tomcsanyiova/PythonCup/\">edi.fmph.uniba.sk/~tomcsanyiova/PythonCup</a>"
 msgstr ""
 
-#: templates/edusummit.html:75
+#: templates/edusummit.html:77
 msgid "What kind of ticked should I buy?"
 msgstr ""
 
-#: templates/edusummit.html:77
+#: templates/edusummit.html:79
 msgid ""
 "All available tickets apply for the whole PyCon SK conference, including "
 "the EduSummit section. All of the talks and workshops take place at the "
@@ -732,31 +736,31 @@ msgid ""
 "attend. If you are a teacher or student you are eligible for a discount."
 msgstr ""
 
-#: templates/edusummit.html:81
+#: templates/edusummit.html:83
 msgid "Young Coders' day"
 msgstr ""
 
-#: templates/edusummit.html:83
+#: templates/edusummit.html:85
 msgid ""
 "On saturday, we will host a Young Coders' day, consisting of programming "
 "workshops for children."
 msgstr ""
 
-#: templates/edusummit.html:87
+#: templates/edusummit.html:89
 msgid "Speak at EduSummit"
 msgstr ""
 
-#: templates/edusummit.html:89
+#: templates/edusummit.html:91
 msgid ""
 "Call for Proposals is open. If you are a teacher or educator submit your "
 "talk or workshop and co-create the conference."
 msgstr ""
 
-#: templates/edusummit.html:93
+#: templates/edusummit.html:95
 msgid "Sponsorship"
 msgstr ""
 
-#: templates/edusummit.html:95
+#: templates/edusummit.html:97
 msgid ""
 "By supporting PyCon you also support numerous educational activities "
 "during the conference. If the conference is profitable we finance "
@@ -1491,105 +1495,139 @@ msgstr ""
 
 #: templates/venue.html:21
 msgid ""
-"Bratislava is one of the youngest major cities in Europe. Nevertheless, "
-"it has a rich history of a free royal coronation town. At that time, it "
-"was still called the Pressburg (Prešpork). Today, Bratislava is a major "
-"transport hub in Central Europe, and there are plenty of possibilities of"
-" getting here."
-msgstr ""
-
-#: templates/venue.html:27
-msgid "By air"
+"Bratislava is one of the youngest capitals in Europe, and also one of the"
+" smallest. Despite this, it has a rich history of a free royal coronation"
+" town of Pressburg and multiple opportunities how to spend time there. "
+"Bratislava has unique location, it is the only capital int he world "
+"located on the border of three countries.Today, Bratislava is a major "
+"transport hub in Central Europe, and there are plenty possibilities of "
+"getting here."
 msgstr ""
 
 #: templates/venue.html:29
+msgid "By air"
+msgstr ""
+
+#: templates/venue.html:31
 msgid ""
 "If you are travelling to Bratislava, you can fly to the Bratislava "
 "airport (airport code: BTS) or the Vienna airport (airport code: VIE). "
-"The selection of flights to Vienna is better than to Bratislava."
+"Vienna airport has considerably better offer of flights."
 msgstr ""
 
-#: templates/venue.html:32
+#: templates/venue.html:35
 msgid ""
-"There are shuttle buses running between Bratislava and Vienna airport "
-"every hour and they are relatively cheap (the bus ride costs about EUR 8 "
-"one way, if you book in advance it can got much cheaper). There are three"
-" bus companies operating airport shuttles between Vienna airport and "
-"Bratislava: SlovakLines (red buses), Blaguss (silver buses) and RegioJet "
-"(Yellow busses)."
-msgstr ""
-
-#: templates/venue.html:36
-msgid "By car"
+"From Bratislava airport you can take taxi (use the phone, its cheaper), "
+"or take the bus #61 and then move to bus #39 at the Bajkalska station. "
+"Get off the bus at the station ZOO and simply follow the PyCon stickers "
+"up to the hill to univerrsity campus."
 msgstr ""
 
 #: templates/venue.html:39
 msgid ""
-"From Vienna, take highway A4, heading to Schwechat airport, when possible"
-" take the exit that leads to highway A6, which heads towards Bratislava."
+"If you travel through Vienna airport, there are direct and cheap bus "
+"connections from early morning till midnight. One way ticket costs about "
+"8 EUR and if you buy in advance, the ticket may be considerably cheaper. "
+"There are three airport shuttle buses between Vienna airport and "
+"Bratislava: SlovakLines (red buses), Blaguss (silver buses) and RegioJet "
+"(Yellow busses)."
 msgstr ""
 
-#: templates/venue.html:40
-msgid ""
-"From Budapest, take highway M1 heading to Gyor, follow this route until "
-"you see signs for highway M15 headed to Slovakia and Bratislava."
-msgstr ""
-
-#: templates/venue.html:41
-msgid ""
-"From Prague, take highway D1 to Brno, once in Brno take highway D2 "
-"heading to Slovakia and Bratislava."
-msgstr ""
-
-#: templates/venue.html:42
-msgid ""
-"From Warsaw, take highway A1 heading to Katowice. From there follow the "
-"road for Čadca, Slovakia. Take this road all the way to Žilina, then "
-"switch to highway D1 to Bratislava."
-msgstr ""
-
-#: templates/venue.html:47
-msgid "By bus"
+#: templates/venue.html:46
+msgid "By car"
 msgstr ""
 
 #: templates/venue.html:49
+msgid ""
+"Arriving from Vienna, choose the direction Schwechat on A4 highway, then "
+"turn to highway A6 leading to Bratislava.\n"
+"            After crossing the border you will soon enter Bratislava, "
+"then follow the direction Praha/Brno. Right after crossing\n"
+"            the river of Danube leave the highway and follow the road "
+"along the highway. After several hundreds of meters you will\n"
+"            get to the crossroad where you should turn left and cross the"
+" highway you have left a minute ago. After the bridge there is another\n"
+"            crossroad where you turn right and immediately turn slightly "
+"left up the hill towards the university campus."
+msgstr ""
+
+#: templates/venue.html:54
+msgid ""
+"From Budapest, take the highway M1 heading to Gyor, follow this route "
+"until you see signs for highway M15 heading to Slovakia and Bratislava.\n"
+"            After crossing the border follow the direction Praha or Brno "
+"according to instructions above."
+msgstr ""
+
+#: templates/venue.html:56
+msgid ""
+"If you drive from Prague, take the highway D1 to Brno, once in Brno take "
+"the highway D2 heading to Slovakia and Bratislava.\n"
+"            After arriving to Bratislava follow the highway and leave it "
+"at the exit Mlynska dolina after passing the tunnel.\n"
+"            Be cautious, the exit is located right after the tunnel, so "
+"you should stay in right lane while in tunnel."
+msgstr ""
+
+#: templates/venue.html:59
+msgid ""
+"From eastern and southern Poland choose your way to Katowice. From there "
+"follow the road to Cadca, Slovakia.\n"
+"            Follow the road all the way to Zilina, then switch to the "
+"highway D1 to Bratislava. After arriving to Bratislava,\n"
+"            you should pass the river of Danube twice following the "
+"direction Praha/Brno, then leave the highway following the instructions "
+"above."
+msgstr ""
+
+#: templates/venue.html:66
+msgid "By bus"
+msgstr ""
+
+#: templates/venue.html:68
 msgid ""
 "All neighbouring capital cities Vienna, Prague, Budapest, Warsaw and Kiev"
 " have direct bus connections."
 msgstr ""
 
-#: templates/venue.html:52
+#: templates/venue.html:71
 msgid ""
-"Once you arrive at the Bratislava bus station (Mlynské Nivy), you'll need"
-" to walk through the terminal towards its main entrance. Take a left and "
-"walk about 70 meters towards a busy street. Do not cross the street. "
-"There will be public transportation bus stops immediately on your right "
-"hand side."
+"Most of the buses will bring you to the main bus station - Mlynske Nivy. "
+"It is currently located in temporary location, so dont\n"
+"            worry and keep calm if you arrive feeling like on "
+"construction site. Leave the area towards the blue oval building VUB\n"
+"            (next to the building with BMW logo) where you find the "
+"station of city bus lines. We recommend you to take bus number\n"
+"            70 to the end station Most SNP (SNP bridge) and from there "
+"continue with line number 30 or 37 to the station ZOO."
 msgstr ""
 
-#: templates/venue.html:56
+#: templates/venue.html:78
 msgid "By train"
 msgstr ""
 
-#: templates/venue.html:58
+#: templates/venue.html:80
 msgid ""
 "All neighboring capital cities Vienna, Prague, Budapest, Warsaw and Kiev "
 "have direct train connections."
 msgstr ""
 
-#: templates/venue.html:61
+#: templates/venue.html:83
 msgid ""
 "Once you arrive at the Bratislava train station (Bratislava hlavná "
-"stanica), you'll need to walk through the terminal towards its main "
-"entrance. Directly in front of the main entrance you'll find all your "
-"public transportation options on your right hand side."
+"stanica), leave the station through the main entrance.\n"
+"            In front of the building, there are bus and tram stops. We "
+"recommend zou to take the bus number 32 to the station ZOO.\n"
+"            If you plan to use city lines more often, we recommend you to"
+" check the website https://imhd.sk/ba/ for more information\n"
+"            about the prices or the lines."
 msgstr ""
 
-#: templates/venue.html:67
+#: templates/venue.html:92
 msgid "Accommodation"
 msgstr ""
 
-#: templates/venue.html:69
+#: templates/venue.html:94
 msgid ""
 "There are plenty of opportunities for accommodation in Bratislava. From "
 "coach surfing, Airbnb to hostels and five star hotels. Even though it is "
@@ -1597,11 +1635,11 @@ msgid ""
 " advance."
 msgstr ""
 
-#: templates/venue.html:72
+#: templates/venue.html:97
 msgid "Guide"
 msgstr ""
 
-#: templates/venue.html:74
+#: templates/venue.html:99
 msgid ""
 "Bratislava offers much more than just PyCon. If you decide to stay in "
 "Bratislava a few days longer, have a look at <a "
@@ -1612,7 +1650,7 @@ msgid ""
 "about each location or event."
 msgstr ""
 
-#: templates/venue.html:77
+#: templates/venue.html:102
 msgid ""
 "Or you can review the <a href=\"http://www.visitbratislava.com/\" "
 "title=\"city pages for visitors\" target=\"_blank\" "
