updated translation for poster session

--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -859,7 +859,7 @@ msgstr ""
 
 #: templates/edusummit.html:64
 msgid "Poster Session"
-msgstr "Posterová session"
+msgstr "Posterová sekcia"
 
 #: templates/edusummit.html:66
 msgid "We will host a poster session and we will be happy if you get involved."
